Add health, update CLI
